extensions/wikia/Venus/styles/layout.scss
@import 'skins/shared/color';
@import 'extensions/wikia/Venus/styles/variables';
@import 'extensions/wikia/Venus/styles/mixins';

body {
	color: $color-text;
	margin: 0;
	overflow-x: auto;
	padding: 0 0 30px;
}

a {
	color: $color-links;
	text-decoration: none;

	&:hover {
		text-decoration: underline;
	}
}

.wikia-page-wrapper {
	padding: $global-navigation-height 0 0;
}

.wikia-page {
	background: rgba($color-page, $page-opacity);
	border: $content-border-width solid $color-page-border;
	position: relative; // needed for skin ads to not cover the article

	& > header {
		@include grid-content-padding;
	}
}

.page-width {
	margin: 0 auto;
	width: $medium-content-width;
}

.padded-content {
	@include grid-content-padding;
}

.padded-column {
	@include grid-column-padding;
}


@media #{$small-only} {
	.page-width {
		width: $small-content-width;
	}
}

@media #{$large-up} {
	.page-width {
		width: $large-content-width;
	}
}

@media #{$below-small} {
	.wikia-page-wrapper {
		padding-top: 0;
	}
}

